--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "logbo-bot",
   "version":  "1.0.0",
+  "description": "Misskey login bonus bot"
   "type": "module",
+  "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js"
+  },
+  "keywords": ["misskey", "bot", "login-bonus"],
+  "author": "haibalaryo",
+  "license": "CC0-1.0"
   "dependencies": {
     "misskey-js": "^2024.10.1",
     "better-sqlite3": "^11.0.0"
