--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   logbo-bot:
     build:  .
@@ -7,5 +5,5 @@ services:
     env_file:
       - .env
     volumes:
-      - ./database. db:/app/database.db
+      - ./data:/app/data
     restart: unless-stopped
