Add .github/workflows/build.yml:Github Actions対応, Fix Dockerfile: node:20-alpineから-slimに変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   logbo-bot:
-    build:  .
+    image: ghcr.io/haibalaryo/logbo-bot:latest
     container_name: logbo-bot
     env_file:
       - .env
