--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,5 @@ services:
     volumes:
       - ./data:/app/data
     restart: unless-stopped
+    ports:
+      - "127.0.0.1:3000:3000"  # ホストの3000番をコンテナの3000番に繋ぐ
